Выполнение ТЗ-8